--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install package
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install .
+        python3 -m pip install . pytest
 
     - name: Test with pytest
       run: |
