--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,8 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.8.1
+        env:
+          CIBW_BUILD: cp{36,37,38,39,310}-manylinux_x86_64
 
       - uses: actions/upload-artifact@v3
         with:
