--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
 [build-system]
 build-backend = "mesonpy"
 requires = ["meson-python", "Cython"]
+
+[project]
+name = "condat-gridconv"
+version = "0.1"
+description = "Convert data from hexagonal pixels to cartesian grid"
+authors = [{name = "European XFEL GmbH", email = "da-support@xfel.eu"}]
+readme = "README.md"
+requires-python='>=3.7'
+dependencies = [
+    'numpy',
+]
+
+[project.urls]
+source = "https://github.com/European-XFEL/condat-gridconv"
