--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,6 +50,10 @@ jobs:
         with:
           output-dir: dist
 
+      - name: List package files
+        run: |
+          ls -lh dist
+
       # upload to PyPI on any tag on main
       - uses: pypa/gh-action-pypi-publish@release/v1
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
